--- a/packages/tailwind-config/package.json
+++ b/packages/tailwind-config/package.json
@@ -9,6 +9,7 @@
     "tailwindcss-animate": "^1.0.7"
   },
   "devDependencies": {
-    "tailwindcss": "^3.3.5"
+    "tailwindcss": "^3.3.5",
+    "@tailwindcss/typography": "^0.5.1"
   }
 }
