--- a/apps/admin/package.json
+++ b/apps/admin/package.json
@@ -10,6 +10,8 @@
     "start": "next start -p 4000"
   },
   "dependencies": {
+    "@edgestore/react": "^0.1.6",
+    "@edgestore/server": "^0.1.6",
     "@headlessui/react": "^1.7.18",
     "@hookform/resolvers": "^3.3.4",
     "@t3-oss/env-nextjs": "^0.7.1",
