--- a/apps/admin/package.json
+++ b/apps/admin/package.json
@@ -36,10 +36,12 @@
     "nextjs-toploader": "^1.6.4",
     "react": "18.2.0",
     "react-dom": "18.2.0",
+    "react-dropzone": "^14.2.3",
     "react-hook-form": "^7.49.3",
     "server-only": "^0.0.1",
     "sonner": "^1.3.1",
     "superjson": "^2.2.1",
+    "tailwind-merge": "^2.2.0",
     "zod": "^3.22.4"
   },
   "devDependencies": {
