--- a/packages/ui/package.json
+++ b/packages/ui/package.json
@@ -21,6 +21,7 @@
   "dependencies": {
     "@hookform/resolvers": "^3.3.4",
     "@radix-ui/react-alert-dialog": "^1.0.5",
+    "@radix-ui/react-aspect-ratio": "^1.0.3",
     "@radix-ui/react-avatar": "^1.0.4",
     "@radix-ui/react-checkbox": "^1.0.4",
     "@radix-ui/react-dialog": "^1.0.5",
@@ -35,6 +36,8 @@
     "clsx": "^1.2.1",
     "cmdk": "^0.2.0",
     "date-fns": "^3.2.0",
+    "embla-carousel-react": "^8.0.0-rc19",
+    "isomorphic-dompurify": "^2.2.0",
     "lucide-react": "^0.244.0",
     "react-day-picker": "^8.10.0",
     "react-hook-form": "^7.49.3",
