--- a/apps/admin/package.json
+++ b/apps/admin/package.json
@@ -45,11 +45,11 @@
     "zod": "^3.22.4"
   },
   "devDependencies": {
-    "@repo/assets": "*",
-    "@repo/tailwind-config": "*",
-    "@repo/types": "*",
-    "@repo/utils": "*",
-    "@repo/validators": "*",
+    "@repo/assets": "workspace:*",
+    "@repo/tailwind-config": "workspace:*",
+    "@repo/types": "workspace:*",
+    "@repo/utils": "workspace:*",
+    "@repo/validators": "workspace:*",
     "@types/eslint": "^8.44.7",
     "@types/jsonwebtoken": "^9.0.5",
     "@types/node": "^18.17.0",
