--- a/package.json
+++ b/package.json
@@ -5,18 +5,19 @@
     "build": "turbo build",
     "dev": "turbo dev",
     "lint": "turbo lint",
+    "ui:add": "pnpm --filter @repo/ui ui:add",
     "format": "prettier --write \"**/*.{ts,tsx,md}\""
   },
   "devDependencies": {
-    "@repo/eslint-config": "*",
-    "@repo/typescript-config": "*",
+    "@repo/eslint-config": "workspace:*",
+    "@repo/typescript-config": "workspace:*",
     "prettier": "^3.1.1",
     "turbo": "latest"
   },
   "engines": {
     "node": ">=18"
   },
-  "packageManager": "npm@10.3.0",
+  "packageManager": "pnpm@8.14.3",
   "workspaces": [
     "apps/*",
     "packages/*"
