--- a/apps/student/package.json
+++ b/apps/student/package.json
@@ -12,19 +12,19 @@
   "dependencies": {
     "@headlessui/react": "^1.7.18",
     "@hookform/resolvers": "^3.3.4",
-    "@t3-oss/env-nextjs": "^0.7.1",
+    "@t3-oss/env-nextjs": "^0.7.3",
     "@tanstack/react-query": "^4.36.1",
-    "@tanstack/react-table": "^8.11.6",
-    "@trpc/client": "^10.43.6",
-    "@trpc/next": "^10.43.6",
-    "@trpc/react-query": "^10.43.6",
-    "@trpc/server": "^10.43.6",
-    "axios": "^1.6.5",
+    "@tanstack/react-table": "^8.11.7",
+    "@trpc/client": "^10.45.0",
+    "@trpc/next": "^10.45.0",
+    "@trpc/react-query": "^10.45.0",
+    "@trpc/server": "^10.45.0",
+    "axios": "^1.6.6",
     "cmdk": "^0.2.0",
-    "date-fns": "^3.2.0",
+    "date-fns": "^3.3.1",
     "jsonwebtoken": "^9.0.2",
     "lucide-react": "^0.309.0",
-    "next": "^14.0.4",
+    "next": "^14.1.0",
     "next-auth": "^4.24.5",
     "next-themes": "^0.2.1",
     "nextjs-toploader": "^1.6.4",
@@ -33,6 +33,7 @@
     "react-hook-form": "^7.49.3",
     "react-lottie-player": "^1.5.6",
     "server-only": "^0.0.1",
+    "sharp": "^0.33.2",
     "sonner": "^1.3.1",
     "superjson": "^2.2.1",
     "zod": "^3.22.4"
@@ -43,21 +44,21 @@
     "@repo/types": "workspace:*",
     "@repo/utils": "workspace:*",
     "@repo/validators": "workspace:*",
-    "@types/eslint": "^8.44.7",
+    "@types/eslint": "^8.56.2",
     "@types/jsonwebtoken": "^9.0.5",
-    "@types/node": "^18.17.0",
-    "@types/react": "^18.2.37",
-    "@types/react-dom": "^18.2.15",
-    "@typescript-eslint/eslint-plugin": "^6.11.0",
-    "@typescript-eslint/parser": "^6.11.0",
-    "autoprefixer": "^10.4.14",
-    "eslint": "^8.54.0",
-    "eslint-config-next": "^14.0.4",
-    "postcss": "^8.4.31",
-    "prettier": "^3.1.0",
-    "prettier-plugin-tailwindcss": "^0.5.7",
-    "tailwindcss": "^3.3.5",
-    "typescript": "^5.1.6"
+    "@types/node": "^18.19.9",
+    "@types/react": "^18.2.48",
+    "@types/react-dom": "^18.2.18",
+    "@typescript-eslint/eslint-plugin": "^6.19.1",
+    "@typescript-eslint/parser": "^6.19.1",
+    "autoprefixer": "^10.4.17",
+    "eslint": "^8.56.0",
+    "eslint-config-next": "^14.1.0",
+    "postcss": "^8.4.33",
+    "prettier": "^3.2.4",
+    "prettier-plugin-tailwindcss": "^0.5.11",
+    "tailwindcss": "^3.4.1",
+    "typescript": "^5.3.3"
   },
   "ct3aMetadata": {
     "initVersion": "7.25.1"
