--- a/packages/utils/package.json
+++ b/packages/utils/package.json
@@ -10,5 +10,8 @@
     "tailwind-merge": "^1.13.2",
     "zod": "^3.22.4",
     "jsonwebtoken": "^9.0.2"
+  },
+  "devDependencies": {
+    "@types/jsonwebtoken": "^9.0.5"
   }
 }
