--- a/apps/student/package.json
+++ b/apps/student/package.json
@@ -12,6 +12,7 @@
   "dependencies": {
     "@headlessui/react": "^1.7.18",
     "@hookform/resolvers": "^3.3.4",
+    "@react-google-maps/api": "^2.19.2",
     "@t3-oss/env-nextjs": "^0.7.3",
     "@tanstack/react-query": "^4.36.1",
     "@tanstack/react-table": "^8.11.7",
@@ -19,7 +20,7 @@
     "@trpc/next": "^10.45.0",
     "@trpc/react-query": "^10.45.0",
     "@trpc/server": "^10.45.0",
-    "axios": "^1.6.6",
+    "axios": "^1.6.7",
     "cmdk": "^0.2.0",
     "date-fns": "^3.3.1",
     "jsonwebtoken": "^9.0.2",
@@ -46,7 +47,7 @@
     "@repo/validators": "workspace:*",
     "@types/eslint": "^8.56.2",
     "@types/jsonwebtoken": "^9.0.5",
-    "@types/node": "^18.19.9",
+    "@types/node": "^18.19.10",
     "@types/react": "^18.2.48",
     "@types/react-dom": "^18.2.18",
     "@typescript-eslint/eslint-plugin": "^6.19.1",
