Add alias for "ui" in components.json

--- a/packages/ui/components.json
+++ b/packages/ui/components.json
@@ -12,6 +12,7 @@
   },
   "aliases": {
     "components": "@ui/components",
+    "ui": "@ui/components/shadcn",
     "utils": "@ui/lib/utils"
   }
 }
