--- a/apps/admin/package.json
+++ b/apps/admin/package.json
@@ -38,6 +38,7 @@
     "react-dom": "18.2.0",
     "react-dropzone": "^14.2.3",
     "react-hook-form": "^7.49.3",
+    "recharts": "^2.11.0",
     "server-only": "^0.0.1",
     "sharp": "^0.33.2",
     "sonner": "^1.3.1",
