--- a/apps/admin/package.json
+++ b/apps/admin/package.json
@@ -17,16 +17,19 @@
     "@t3-oss/env-nextjs": "^0.7.3",
     "@tanstack/react-query": "^4.36.1",
     "@tanstack/react-table": "^8.11.7",
-    "@tiptap/extension-link": "^2.1.16",
-    "@tiptap/extension-text-align": "^2.1.16",
-    "@tiptap/react": "^2.1.16",
-    "@tiptap/starter-kit": "^2.1.16",
+    "@tiptap/extension-bullet-list": "^2.2.0",
+    "@tiptap/extension-link": "^2.2.0",
+    "@tiptap/extension-list-item": "^2.2.0",
+    "@tiptap/extension-text-align": "^2.2.0",
+    "@tiptap/pm": "^2.2.0",
+    "@tiptap/react": "^2.2.0",
+    "@tiptap/starter-kit": "^2.2.0",
     "@trpc/client": "^10.45.0",
     "@trpc/next": "^10.45.0",
     "@trpc/react-query": "^10.45.0",
     "@trpc/server": "^10.45.0",
     "axios": "^1.6.7",
-    "cmdk": "^0.2.0",
+    "cmdk": "^0.2.1",
     "date-fns": "^3.3.1",
     "jsonwebtoken": "^9.0.2",
     "lucide-react": "^0.309.0",
@@ -41,7 +44,7 @@
     "recharts": "^2.11.0",
     "server-only": "^0.0.1",
     "sharp": "^0.33.2",
-    "sonner": "^1.3.1",
+    "sonner": "^1.4.0",
     "superjson": "^2.2.1",
     "tailwind-merge": "^2.2.1",
     "zod": "^3.22.4"
@@ -54,11 +57,11 @@
     "@repo/validators": "workspace:*",
     "@types/eslint": "^8.56.2",
     "@types/jsonwebtoken": "^9.0.5",
-    "@types/node": "^18.19.10",
+    "@types/node": "^18.19.11",
     "@types/react": "^18.2.48",
     "@types/react-dom": "^18.2.18",
-    "@typescript-eslint/eslint-plugin": "^6.19.1",
-    "@typescript-eslint/parser": "^6.19.1",
+    "@typescript-eslint/eslint-plugin": "^6.20.0",
+    "@typescript-eslint/parser": "^6.20.0",
     "autoprefixer": "^10.4.17",
     "eslint": "^8.56.0",
     "eslint-config-next": "^14.1.0",
