--- a/package.json
+++ b/package.json
@@ -12,7 +12,7 @@
     "@repo/eslint-config": "workspace:*",
     "@repo/typescript-config": "workspace:*",
     "prettier": "^3.2.4",
-    "turbo": "latest"
+    "turbo": "^1.12.0"
   },
   "engines": {
     "node": ">=18"
