--- a/apps/admin/package.json
+++ b/apps/admin/package.json
@@ -17,13 +17,13 @@
     "@t3-oss/env-nextjs": "^0.7.3",
     "@tanstack/react-query": "^4.36.1",
     "@tanstack/react-table": "^8.11.7",
-    "@tiptap/extension-bullet-list": "^2.2.0",
-    "@tiptap/extension-link": "^2.2.0",
-    "@tiptap/extension-list-item": "^2.2.0",
-    "@tiptap/extension-text-align": "^2.2.0",
-    "@tiptap/pm": "^2.2.0",
-    "@tiptap/react": "^2.2.0",
-    "@tiptap/starter-kit": "^2.2.0",
+    "@tiptap/extension-bullet-list": "2.2.0",
+    "@tiptap/extension-link": "2.2.0",
+    "@tiptap/extension-list-item": "2.2.0",
+    "@tiptap/extension-text-align": "2.2.0",
+    "@tiptap/pm": "2.2.0",
+    "@tiptap/react": "2.2.0",
+    "@tiptap/starter-kit": "2.2.0",
     "@trpc/client": "^10.45.0",
     "@trpc/next": "^10.45.0",
     "@trpc/react-query": "^10.45.0",
