--- a/apps/front/package.json
+++ b/apps/front/package.json
@@ -4,6 +4,7 @@
   "private": true,
   "scripts": {
     "dev": "next dev -p 2000",
+    "postbuild": "next-sitemap --config=next-sitemap.js",
     "build": "next build",
     "start": "next start -p 2000",
     "lint": "next lint"
@@ -16,6 +17,7 @@
     "clsx": "^2.1.0",
     "lucide-react": "^0.300.0",
     "next": "^14.1.0",
+    "next-sitemap": "^4.2.3",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "sharp": "^0.33.2",
