--- a/apps/student/package.json
+++ b/apps/student/package.json
@@ -12,7 +12,6 @@
   "dependencies": {
     "@headlessui/react": "^1.7.18",
     "@hookform/resolvers": "^3.3.4",
-    "@react-google-maps/api": "^2.19.2",
     "@t3-oss/env-nextjs": "^0.7.3",
     "@tanstack/react-query": "^4.36.1",
     "@tanstack/react-table": "^8.11.7",
@@ -64,5 +63,5 @@
   "ct3aMetadata": {
     "initVersion": "7.25.1"
   },
-  "packageManager": "npm@10.2.5"
+  "packageManager": "pnpm@8.15.1"
 }
