--- a/packages/ui/package.json
+++ b/packages/ui/package.json
@@ -24,6 +24,7 @@
     "@radix-ui/react-slot": "^1.0.2",
     "@radix-ui/react-tabs": "^1.0.4",
     "@radix-ui/react-toggle": "^1.0.3",
+    "@react-google-maps/api": "^2.19.2",
     "@tanstack/react-table": "^8.11.7",
     "class-variance-authority": "^0.6.0",
     "clsx": "^1.2.1",
