--- a/apps/front/package.json
+++ b/apps/front/package.json
@@ -11,6 +11,7 @@
   },
   "dependencies": {
     "@radix-ui/react-accordion": "^1.1.2",
+    "@radix-ui/react-dropdown-menu": "^2.0.6",
     "@radix-ui/react-label": "^2.0.2",
     "@radix-ui/react-radio-group": "^1.1.3",
     "@radix-ui/react-slot": "^1.0.2",
@@ -19,6 +20,8 @@
     "class-variance-authority": "^0.7.0",
     "clsx": "^2.1.0",
     "embla-carousel-react": "8.0.0-rc22",
+    "html-to-text": "^9.0.5",
+    "isomorphic-dompurify": "^2.2.0",
     "lucide-react": "^0.300.0",
     "next": "^14.1.0",
     "next-sitemap": "^4.2.3",
@@ -37,6 +40,7 @@
     "@repo/utils": "workspace:*",
     "@repo/validators": "workspace:*",
     "@tailwindcss/typography": "^0.5.10",
+    "@types/html-to-text": "^9.0.4",
     "@types/node": "^20.11.16",
     "@types/react": "^18.2.55",
     "@types/react-dom": "^18.2.18",
