--- a/packages/ui/package.json
+++ b/packages/ui/package.json
@@ -25,33 +25,33 @@
     "@radix-ui/react-tabs": "^1.0.4",
     "@radix-ui/react-toggle": "^1.0.3",
     "@react-google-maps/api": "^2.19.2",
-    "@tanstack/react-table": "^8.11.7",
-    "class-variance-authority": "^0.6.0",
+    "@tanstack/react-table": "^8.11.8",
+    "class-variance-authority": "^0.6.1",
     "clsx": "^1.2.1",
-    "cmdk": "^0.2.0",
-    "date-fns": "^3.2.0",
-    "embla-carousel-react": "^8.0.0-rc19",
-    "isomorphic-dompurify": "^2.2.0",
+    "cmdk": "^0.2.1",
+    "date-fns": "^3.3.1",
+    "embla-carousel-react": "8.0.0-rc22",
+    "isomorphic-dompurify": "^2.3.0",
     "lucide-react": "^0.244.0",
     "react-day-picker": "^8.10.0",
-    "react-hook-form": "^7.49.3",
-    "tailwind-merge": "^1.13.2",
-    "tailwindcss": "^3.3.5",
-    "tailwindcss-animate": "^1.0.6",
+    "react-hook-form": "^7.50.1",
+    "tailwind-merge": "^1.14.0",
+    "tailwindcss": "^3.4.1",
+    "tailwindcss-animate": "^1.0.7",
     "zod": "^3.22.4"
   },
   "devDependencies": {
     "@repo/eslint-config": "workspace:*",
     "@repo/typescript-config": "workspace:*",
     "@repo/utils": "workspace:*",
-    "@types/node": "^17.0.12",
-    "@types/react": "^18.2.0",
-    "@types/react-dom": "^18.2.0",
-    "autoprefixer": "^10.4.14",
+    "@types/node": "^17.0.45",
+    "@types/react": "^18.2.55",
+    "@types/react-dom": "^18.2.18",
+    "autoprefixer": "^10.4.17",
     "eslint": "^7.32.0",
-    "postcss": "^8.4.24",
+    "postcss": "^8.4.34",
     "react": "18.2.0",
     "tailwindcss": "^3.3.2",
-    "typescript": "^4.5.2"
+    "typescript": "^4.9.5"
   }
 }
