--- a/apps/front/package.json
+++ b/apps/front/package.json
@@ -15,6 +15,7 @@
     "@radix-ui/react-label": "^2.0.2",
     "@radix-ui/react-radio-group": "^1.1.3",
     "@radix-ui/react-slot": "^1.0.2",
+    "@sentry/nextjs": "^7.100.1",
     "@t3-oss/env-nextjs": "^0.7.3",
     "axios": "^1.6.7",
     "class-variance-authority": "^0.7.0",
@@ -34,12 +35,12 @@
     "zod": "^3.22.4"
   },
   "devDependencies": {
+    "@repo/assets": "workspace:*",
     "@repo/eslint-config": "workspace:*",
     "@repo/types": "workspace:*",
     "@repo/typescript-config": "workspace:*",
     "@repo/utils": "workspace:*",
     "@repo/validators": "workspace:*",
-    "@repo/assets": "workspace:*",
     "@tailwindcss/typography": "^0.5.10",
     "@types/html-to-text": "^9.0.4",
     "@types/node": "^20.11.16",
