--- a/apps/student/package.json
+++ b/apps/student/package.json
@@ -13,6 +13,9 @@
     "@headlessui/react": "^1.7.18",
     "@hookform/resolvers": "^3.3.4",
     "@sentry/nextjs": "^7.100.1",
+    "@serwist/next": "^8.4.4",
+    "@serwist/precaching": "^8.4.4",
+    "@serwist/sw": "^8.4.4",
     "@t3-oss/env-nextjs": "^0.7.3",
     "@tanstack/react-query": "^4.36.1",
     "@tanstack/react-table": "^8.11.8",
@@ -27,6 +30,7 @@
     "lucide-react": "^0.309.0",
     "next": "^14.1.0",
     "next-auth": "^4.24.5",
+    "next-recompose-plugins": "^2.0.2",
     "next-themes": "^0.2.1",
     "nextjs-toploader": "^1.6.6",
     "react": "18.2.0",
