--- a/.github/workflows/cd.yml
+++ b/.github/workflows/cd.yml
@@ -28,7 +28,7 @@ jobs:
             source ~/.nvm/nvm.sh || true
             nvm use 20 || true
             cd /home/farhan/apps/tabungan-wisata || true
-            git stash || true
+            git stash -u || true
             git pull origin main || true
             pnpm install || true
             pnpm run build || true
