--- a/apps/student/tsconfig.json
+++ b/apps/student/tsconfig.json
@@ -8,7 +8,7 @@
   },
   "include": [
     ".eslintrc.cjs",
-    "next-config.js",
+    "next.config.js",
     "next-env.d.ts",
     "**/*.ts",
     "**/*.tsx",
