--- a/apps/student/package.json
+++ b/apps/student/package.json
@@ -38,6 +38,7 @@
     "react-lottie-player": "^1.5.6",
     "server-only": "^0.0.1",
     "sharp": "^0.33.2",
+    "socket.io-client": "^4.7.4",
     "sonner": "^1.4.0",
     "superjson": "^2.2.1",
     "zod": "^3.22.4"
