--- a/apps/student/package.json
+++ b/apps/student/package.json
@@ -41,6 +41,7 @@
     "socket.io-client": "^4.7.4",
     "sonner": "^1.4.0",
     "superjson": "^2.2.1",
+    "web-push": "^3.6.7",
     "zod": "^3.22.4"
   },
   "devDependencies": {
