--- a/apps/student/package.json
+++ b/apps/student/package.json
@@ -11,7 +11,9 @@
   },
   "dependencies": {
     "@headlessui/react": "^1.7.18",
+    "@headlessui/tailwindcss": "^0.2.0",
     "@hookform/resolvers": "^3.3.4",
+    "@remixicon/react": "^4.1.1",
     "@sentry/nextjs": "^7.100.1",
     "@serwist/next": "^8.4.4",
     "@serwist/precaching": "^8.4.4",
@@ -19,6 +21,7 @@
     "@t3-oss/env-nextjs": "^0.7.3",
     "@tanstack/react-query": "^4.36.1",
     "@tanstack/react-table": "^8.11.8",
+    "@tremor/react": "^3.14.0",
     "@trpc/client": "^10.45.1",
     "@trpc/next": "^10.45.1",
     "@trpc/react-query": "^10.45.1",
@@ -41,6 +44,7 @@
     "socket.io-client": "^4.7.4",
     "sonner": "^1.4.0",
     "superjson": "^2.2.1",
+    "tailwindcss-animate": "^1.0.7",
     "web-push": "^3.6.7",
     "zod": "^3.22.4"
   },
@@ -50,6 +54,7 @@
     "@repo/types": "workspace:*",
     "@repo/utils": "workspace:*",
     "@repo/validators": "workspace:*",
+    "@tailwindcss/typography": "^0.5.10",
     "@types/eslint": "^8.56.2",
     "@types/jsonwebtoken": "^9.0.5",
     "@types/node": "^18.19.15",
