--- a/apps/admin/package.json
+++ b/apps/admin/package.json
@@ -44,6 +44,7 @@
     "recharts": "^2.12.0",
     "server-only": "^0.0.1",
     "sharp": "^0.33.2",
+    "socket.io-client": "^4.7.4",
     "sonner": "^1.4.0",
     "superjson": "^2.2.1",
     "tailwind-merge": "^2.2.1",
