Update app name and description

--- a/apps/student/public/manifest.json
+++ b/apps/student/public/manifest.json
@@ -1,7 +1,7 @@
 {
-  "name": "Tabungan Wisata",
-  "short_name": "Tabungan Wisata",
-  "description": "Discover your dream vacation with Tabungan Wisata - your trusted travel experts. Browse affordable packages, customize your trip with flexible booking options, and get personalized advice from our travel specialists. Whether it's a beach getaway, city break, or exotic adventure, we have the perfect vacation waiting for you. Book online today and start exploring.",
+  "name": "Tiyasa Raksi Abadi",
+  "short_name": "TRA",
+  "description": "Discover your dream vacation with Tiyasa Raksi Abadi - your trusted travel experts. Browse affordable packages, customize your trip with flexible booking options, and get personalized advice from our travel specialists. Whether it's a beach getaway, city break, or exotic adventure, we have the perfect vacation waiting for you. Book online today and start exploring.",
   "theme_color": "#FFFFFF",
   "background_color": "#FFFFFF",
   "start_url": "/",
