--- a/apps/admin/package.json
+++ b/apps/admin/package.json
@@ -31,6 +31,7 @@
     "axios": "^1.6.7",
     "cmdk": "^0.2.1",
     "date-fns": "^3.3.1",
+    "json-as-xlsx": "^2.5.6",
     "jsonwebtoken": "^9.0.2",
     "lucide-react": "^0.309.0",
     "next": "^14.1.0",
