--- a/apps/front/package.json
+++ b/apps/front/package.json
@@ -16,6 +16,7 @@
     "@radix-ui/react-radio-group": "^1.1.3",
     "@radix-ui/react-slot": "^1.0.2",
     "@sentry/nextjs": "^7.100.1",
+    "@strapi/blocks-react-renderer": "^1.0.0",
     "@t3-oss/env-nextjs": "^0.7.3",
     "axios": "^1.6.7",
     "class-variance-authority": "^0.7.0",
